samples/errors/wrong_arity_few.lox
// Wrong number of arguments (too few)
fun f(a, b) { return a + b; }
f(1); // expect runtime error: Expected 2 arguments but got 1.
